# ai-project-os-mcp

./: .gitignore  AI Project OS v2.0.md  GOVERNANCE.md  GOVERNANCE_FREEZE.md  LICENSE  MANIFEST.in  QUICKSTART-NON-TECH.md  README.md  RELEASE_NOTES.md  SECURITY_BOUNDARIES.md  SECURITY_GOVERNANCE.md  ai_project_os_mcp_example.py  architecture.yaml  audit_export.json  config.yaml  governance-manifesto.md  mcp-registry.json  mcp-registry.yaml  policy.yaml  pyproject.toml  setup_ai_os.py  state.json  test_architecture.py  test_export_audit.py
.github/workflows/: ai-guard.yml  publish.yml
ai_project_os_mcp/: README.md  __init__.py  cli.py  config.py  server.py  system_contract.md
ai_project_os_mcp/adapters/: __init__.py  claude.py  cursor.py  trae.py
ai_project_os_mcp/core/: __init__.py  accountability_manager.py  accountability_models.py  agent_coordination_manager.py  agent_models.py  agent_registry.py  arbitration_models.py  architecture_linter.py  auth.py  decision_models.py  event_store.py  events.py  external_authority_models.py  external_governance_interface.py  governance_attestation.py  governance_disclosure_models.py  governance_engine.py  governance_finality_models.py  governance_lifecycle_models.py  governance_lifecycle_phase3.py  governance_proof_manager.py  governance_proof_models.py  human_sovereignty_models.py  jurisdiction_models.py  policy_engine.py  regulatory_freeze_manager.py  rule_engine.py  score_engine.py  session_manager.py  sovereignty_context.py  stage_manager.py  stage_models.py  state_manager.py  trigger_engine.py  trust_anchor_manager.py  trust_anchor_models.py  violation.py
ai_project_os_mcp/tools/: __init__.py  audit_security.py  context_tools.py  dashboard_tools.py  export_audit.py  freeze_stage.py  get_stage.py  guard_src.py  submit_audit.py  verification_tools.py
docs/: S1_scope.md  S5_audit.md  ai-project-os-mcp-whitepaper.md  business-delivery-final-state.md  example-no-code.md  governance-architecture.md  governance-ci.md  handbook-non-technical-owner.md  mcp-spec.md
examples/: example-no-code.md
policies/: system.policy.yaml
prompts/: mother_prompt.md  s5_code_rules.md  vibe_usage_rules.md
scripts/: check_context_refresh.py  check_dependencies.py  check_s5_audit.py  check_stage.py  check_version_consistency.py  freeze_stage.py  guard_src.py  setup_pre_commit.py
tests/: test_governance_acceptance.py  test_rule_engine.py
vibe/: README.md
