[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_project_os_mcp", "ai_project_os_mcp.*"]

[project]
name = "ai-project-os-mcp"
version = "2.5.0"
description = "Enterprise-grade AI engineering governance MCP server"
readme = "README.md"
authors = [
    {name = "AI Project OS Team", email = "contact@ai-project-os.com"},
]
license = {text = "MIT"}
keywords = [
    "mcp",
    "ai-governance",
    "software-engineering",
    "audit",
    "dependency-guard"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance"
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "build",
    "twine",
]

[project.scripts]
ai-os-mcp = "ai_project_os_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/wuxiaolong123121/ai-project-os-mcp"
Source = "https://github.com/wuxiaolong123121/ai-project-os-mcp"
"Bug Tracker" = "https://github.com/wuxiaolong123121/ai-project-os-mcp/issues"
Documentation = "https://github.com/wuxiaolong123121/ai-project-os-mcp#readme"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
